plugins {
    id 'application'
    id 'java'
}

group = 'org.example'
version = 'unspecified'

repositories {
    mavenCentral()
}

application {
    mainClass = 'main.GameMain'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

jar {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

dependencies {
    implementation("com.google.guava:guava:28.2-jre")
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    enabled = false  // Disable tests for faster builds
}

